--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,14 +1,19 @@
 ---
+# If disabled, the role will not run.
 certbot_enable: true
+
+# Certbot installation and logs.
 certbot_url: 'https://dl.eff.org/certbot-auto'
 certbot_path: '/opt/certbot'
 certbot_log: '/var/log/certbot-certificate-renewal.log'
+
+# Certificates generation and installation.
 certbot_rsa_key_size: 4096
 certbot_letsencrypt_path: '/etc/letsencrypt/live'
 certbot_certificates_path: '/etc/nginx/ssl'
 certbot_current_server: nginx
 
-# Cron job
+# Certificates renewal time settings for Cron job.
 certbot_cron_month: '*/2'
 certbot_cron_hour: '{{ 5 | random(seed=inventory_hostname) }}'
 certbot_cron_minute: '{{ 59 | random(seed=inventory_hostname) }}'
