Make sure parent folder exists before creating symlink

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -15,6 +15,7 @@ galaxy_info:
       versions:
         - trusty  # 14.04
         - xenial  # 16.04
+        - bionic  # 18.04
   galaxy_tags:
     - certbot
     - certificate
